--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -78,49 +78,52 @@
     <!-- BOton Flotante FIn-->
 
     <!-- carrusel -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+    <main>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../img/slider/servicio-1.png" class="d-block w-100 tamaño-carrusel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="titulo-servicios texto-carrusel">Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
+                        <a href="servicioUno.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/slider/servicio-2.png" class="d-block w-100 tamaño-carrusel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="titulo-servicios texto-carrusel">Servicios Generales en Infraestructura & Ingenieria</h3>
+                        <a href="servicioDos.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/slider/servicio-3.png" class="d-block w-100 tamaño-carrusel" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3 class="titulo-servicios texto-carrusel">Servicio de Alquileres de Equipos & Herramientas para la Construccion</h3>
+                        <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../img/slider/servicio-1.png" class="d-block w-100 tamaño-carrusel" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h3 class="titulo-servicios texto-carrusel">Asesorías & Proyectos de Ingeniería - Arquitectura</h3>
-                    <a href="servicioUno.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="../img/slider/servicio-2.png" class="d-block w-100 tamaño-carrusel" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h3 class="titulo-servicios texto-carrusel">Servicios Generales en Infraestructura & Ingenieria</h3>
-                    <a href="servicioDos.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="../img/slider/servicio-3.png" class="d-block w-100 tamaño-carrusel" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h3 class="titulo-servicios texto-carrusel">Servicio de Alquileres de Equipos & Herramientas para la Construccion</h3>
-                    <a href="servicioTres.html" class="btn btn-primary botonprincipal align-content-center">Ver mas</a>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    </main>
+    
 
     <!-- carrusel fin -->
 
