--- a/Pages/inicio.html
+++ b/Pages/inicio.html
@@ -64,8 +64,9 @@
 
     <nav class="navbar navbar-light bg-light fixed-top navbar-movil">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand logo-movil" href="#">
                 <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
+                <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
