--- a/Pages/contactanos.html
+++ b/Pages/contactanos.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark colormenu-secundario">
+    <nav class="navbar navbar-expand-lg navbar-dark colormenu-secundario navbar-web">
         <div class="container-fluid">
             <div class="collapse navbar-collapse d-flex justify-content-around reducirNavbar barra-navegacion" id="navbarNavDropdown">
 
@@ -59,6 +59,61 @@
         </div>
     </nav>
     <!-- Navbar fin -->
+
+    <!-- navbar-movil -->
+
+    <nav class="navbar navbar-light bg-light navbar-movil">
+        <div class="container-fluid">
+            <a class="navbar-brand logo-movil-padre" href="inicio.html">
+                <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
+                <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+                aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title logo-movil-padre" id="offcanvasNavbarLabel">
+                        <img class="logo-movil" src="../img/logo/AGM.png" alt="logo-movil">
+                        <p class="texto-logo-movil">Ingenieria y Servicios Generales</p>
+                    </h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="inicio.html"><i class="fas fa-home"></i> Inicio</a>
+                        </li>
+    
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-briefcase"></i> Servicios
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item item-navbar" href="servicioUno.html">Asesorías & Proyectos de Ingeniería - Arquitectura</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioDos.html">Servicios Generales en Infraestructura & Ingenieria</a></li>
+                              <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item item-navbar" href="servicioTres.html">Alquileres de Equipos & Herramientas para la Construccion</a></li>
+                            </ul>
+                          </li>
+    
+                        <li class="nav-item">
+                            <a class="nav-link active" href="nosotros.html"> <i class="fas fa-users"></i> Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="contactanos.html"><i class="fas fa-mobile-alt"></i> Contáctanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- navbar-movil-fin -->
 
    <!-- BOton Flotante -->
    <div class="btncontainer">
